# plant-pal-official

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ASSUMPTIONS.md  BACKUPS.md  DEPLOYMENT.md  Dockerfile  MAINTENANCE.md  Makefile  README.md  RELEASE.md  TESTING.md  add_plant_bundle.txt  all_plants_available.txt  app.py  compose.hub.example.yaml  compose.yaml  landing_page_bundle.txt  my_plants_bundle.txt  plant_library_bundle.txt  pyproject.toml  requirements-dev.in  requirements-tools.txt  requirements.in  requirements.txt  run.sh
app/: error_handlers.py  logging_config.py  main.py  security.py  version_info.py  watering_date.py
app/routes/: add_plant.py  api.py  dev.py  health.py  landing.py  library.py  plants.py  pwa.py
app/services/: insights.py
app/static/: manifest.json
app/static/css/: main.css
app/static/js/: sw.js  tw-config.js
app/templates/: add_plant.html  add_plant_archetype.html  base.html  edit_plant.html  landing.html  library.html  my_plants.html  plant_detail.html  plants.html
app/templates/_components/: nav.html  nav_back.html  water_controls.html  water_date_error_banner.html
core/: __init__.py  db.py  drying_model.py  example_data.py  icons.py  identity_cues.py  learning_tier.py  plant_images.py  plant_library_data.py  plant_visual_seed.py  schema.py  service.py  ui_copy.py  uploads.py
core/db/: __init__.py  connection.py  migrations.py  queries.py  schema.py  seeds.py
scripts/: backup-plantpal.sh  build-release-image.sh  docker-buildx-push.sh  import_plant_profile_images.py  restore-plantpal-example.sh
static/: README.txt
tests/: conftest.py  test_api_log_watered.py  test_api_validation.py  test_coefficient_learning.py  test_drying_model.py  test_identity_cues.py  test_known_issues.py  test_learning_tier.py  test_recommendation.py  test_recommendation_v2.py  test_scenarios.py  test_security.py  test_service.py  test_ui_copy.py  test_update_plant.py
